Add very simple interface for jsy interface

--- a/E.T. Phone Home/jsy/jsy.vcxproj
+++ b/E.T. Phone Home/jsy/jsy.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jsy.h" />
+    <ClInclude Include="types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="jsy.cpp" />
