--- a/E.T. Phone Home/E.T. Phone Home/E.T. Phone Home.vcxproj
+++ b/E.T. Phone Home/E.T. Phone Home/E.T. Phone Home.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityFactory.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Movable.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Sprite.cpp" />
