--- a/E.T. Phone Home/E.T. Phone Home/E.T. Phone Home.vcxproj.filters
+++ b/E.T. Phone Home/E.T. Phone Home/E.T. Phone Home.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="EntityFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
