--- a/E.T. Phone Home/E.T. Phone Home/E.T. Phone Home.vcxproj.filters
+++ b/E.T. Phone Home/E.T. Phone Home/E.T. Phone Home.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="EntityFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
