--- a/OpenGL Framework/OpenGL Framework.vcxproj.filters
+++ b/OpenGL Framework/OpenGL Framework.vcxproj.filters
@@ -20,6 +20,7 @@
     <ClCompile Include="ET.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Enemy.cpp" />
+	<ClCompile Include="Bullet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ball.h" />
@@ -46,5 +47,6 @@
     <ClInclude Include="ET.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Enemy.h" />
+	<ClInclude Include="Bullet.h" />
   </ItemGroup>
 </Project>
