--- a/OpenGL Framework/OpenGL Framework.vcxproj.filters
+++ b/OpenGL Framework/OpenGL Framework.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="Trajectory.cpp" />
     <ClCompile Include="FallTrajectory.cpp" />
     <ClCompile Include="Explosion.cpp" />
+    <ClCompile Include="Scoreboard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ball.h" />
@@ -54,5 +55,6 @@
     <ClInclude Include="Trajectory.h" />
     <ClInclude Include="FallTrajectory.h" />
     <ClInclude Include="Explosion.h" />
+    <ClInclude Include="Scoreboard.h" />
   </ItemGroup>
 </Project>
