--- a/OpenGL Framework/OpenGL Framework.vcxproj
+++ b/OpenGL Framework/OpenGL Framework.vcxproj
@@ -97,8 +97,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ball.cpp" />
-    <ClCompile Include="BallManager.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Explosion.cpp" />
@@ -114,7 +112,6 @@
     <ClCompile Include="openGLStuff.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="Scoreboard.cpp" />
-    <ClCompile Include="ShapeDraw.cpp" />
     <ClCompile Include="SideTrajectory.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -125,8 +122,6 @@
     <ClCompile Include="Trajectory.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ball.h" />
-    <ClInclude Include="BallManager.h" />
     <ClInclude Include="collInfo.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Player.h" />
@@ -144,9 +139,7 @@
     <ClInclude Include="openGLStuff.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="Scoreboard.h" />
-    <ClInclude Include="ShapeDraw.h" />
     <ClInclude Include="SideTrajectory.h" />
-    <ClInclude Include="SOIL.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteDemoManager.h" />
@@ -158,6 +151,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="jsy\jsy.vcxproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="jsy\jsy.vcxproj">
+      <Project>{22324c81-2e42-4fe0-b299-6e3ba4209357}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
