--- a/OpenGL Framework/jsy/jsy.vcxproj
+++ b/OpenGL Framework/jsy/jsy.vcxproj
@@ -77,6 +77,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -135,6 +136,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jsy.h" />
+    <ClInclude Include="jsy_internal.h" />
+    <ClInclude Include="SOIL.h" />
     <ClInclude Include="types.h" />
   </ItemGroup>
   <ItemGroup>
