--- a/OpenGL Framework/OpenGL Framework.vcxproj
+++ b/OpenGL Framework/OpenGL Framework.vcxproj
@@ -106,8 +106,7 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="object.cpp" />
-    <ClCompile Include="openGLFramework.cpp" />
-    <ClCompile Include="openGLStuff.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="Scoreboard.cpp" />
     <ClCompile Include="SideTrajectory.cpp" />
@@ -131,8 +130,6 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="gameObjects.h" />
     <ClInclude Include="Object.h" />
-    <ClInclude Include="openGLFramework.h" />
-    <ClInclude Include="openGLStuff.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="Scoreboard.h" />
     <ClInclude Include="SideTrajectory.h" />
