--- a/Fuck/Galaxa/Galaxa.vcproj
+++ b/Fuck/Galaxa/Galaxa.vcproj
@@ -59,7 +59,7 @@
 				DontMountUD="TRUE"
 				NoLibWarn="TRUE"
 				TitleID="0xffff881c"
-				TitleName="Galaxa"
+				TitleName="NotGalaga"
 				TitleImage=""
 				XBEVersion="4096"/>
 		</Configuration>
